# JotDown

./: Cargo.toml  README.md  glama.json
src/: formatter.rs  jot.rs  main.rs  notion.rs  util.rs
