[package]
name = "Jotdown"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.1", features = [
    "server",
    "transport-sse-server",
    "transport-io",
] }
tokio = { version = "1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "io-std",
    "signal",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }

anyhow = "1.0"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
schemars = { version = "0.8", optional = true }
dirs = "5"